--- a/src/main/resources/templates/projetoCadastro-client/src/app/cliente-list/cliente-list.component.html
+++ b/src/main/resources/templates/projetoCadastro-client/src/app/cliente-list/cliente-list.component.html
@@ -1,3 +1,9 @@
-<p>
-  cliente-list works!
-</p>
+<h1>Lista de Clientes</h1>
+ 
+<div *ngFor="let cliente of clientes | async" style="width: 300px;">
+  <app-cliente-details [cliente]='cliente'></app-cliente-details>
+</div>
+ 
+<div>
+  <button type="button" class="button btn-danger" (click)='deleteTodosClientes()'>Delete Todos Clientes</button>
+</div>
