--- a/src/main/resources/templates/projetoCadastro-client/src/app/cliente-details/cliente-details.component.html
+++ b/src/main/resources/templates/projetoCadastro-client/src/app/cliente-details/cliente-details.component.html
@@ -1,3 +1,19 @@
-<p>
-  cliente-details works!
-</p>
+<div *ngIf="cliente">
+  <div>
+    <label>Nome: </label> {{cliente.nome}}
+  </div>
+  <div>
+    <label>Cpf: </label> {{cliente.cpf}}
+  </div>
+  <div>
+    <label>Ativo: </label> {{cliente.ativo}}
+  </div>
+
+  <span class="button is-small btn-primary" *ngIf='cliente.ativo' (click)='updateAtivo(false)'>Inativo</span>
+
+  <span class="button is-small btn-primary" *ngIf='!cliente.ativo' (click)='updateAtivo(true)'>Ativo</span>
+{{' '}}
+  <span class="button is-small btn-danger" (click)='deleteCliente()'>Delete</span>
+
+  <hr/>
+</div>
