--- a/src/main/resources/templates/projetoCadastro-client/src/app/cliente-create/cliente-create.component.html
+++ b/src/main/resources/templates/projetoCadastro-client/src/app/cliente-create/cliente-create.component.html
@@ -1,3 +1,21 @@
-<p>
-  cliente-create works!
-</p>
+<h3>Criar Cliente</h3>
+<div [hidden]="submitted" style="width: 300px;">
+  <form (ngSubmit)="onSubmit()">
+    <div class="form-group">
+      <label for="name">Nome</label>
+      <input type="text" class="form-control" id="nome" required [(ngModel)]="cliente.nome" name="nome">
+    </div>
+ 
+    <div class="form-group">
+      <label for="age">Cpf</label>
+      <input type="text" class="form-control" id="cpf" required [(ngModel)]="cliente.cpf" name="cpf">
+    </div>
+ 
+    <button type="submit" class="btn btn-success">Cadastrar</button>
+  </form>
+</div>
+ 
+<div [hidden]="!submitted">
+  <h4>O cadastro do Cliente foi realizado com sucesso!</h4>
+  <button class="btn btn-success" (click)="novoCadastroCliente()">Novo Cadastro</button>
+</div>
