--- a/src/main/resources/templates/projetoCadastro-client/src/app/cliente-create/cliente-create.component.html
+++ b/src/main/resources/templates/projetoCadastro-client/src/app/cliente-create/cliente-create.component.html
@@ -8,7 +8,7 @@
  
     <div class="form-group">
       <label for="age">Cpf</label>
-      <input type="text" class="form-control" id="cpf" required [(ngModel)]="cliente.cpf" name="cpf">
+      <input type="text" class="form-control" id="cpf" required [(ngModel)]="cliente.cpf" name="cpf" placeholder="000.000.000-00">
     </div>
  
     <button type="submit" class="btn btn-success">Cadastrar</button>
