--- a/src/main/resources/templates/projetoCadastro-client/src/app/cliente-search/cliente-search.component.html
+++ b/src/main/resources/templates/projetoCadastro-client/src/app/cliente-search/cliente-search.component.html
@@ -3,7 +3,7 @@
   <form (ngSubmit)="onSubmit()">
     <div class="form-group">
       <label for="lastname">Cpf</label>
-      <input type="text" class="form-control" id="cpf" required [(ngModel)]="cpf" name="cpf">
+      <input type="text" class="form-control" id="cpf" required [(ngModel)]="cpf" name="cpf" placeholder="000.000.000-00">
     </div>
  
     <div class="btn-group">
