--- a/src/main/resources/templates/projetoCadastro-client/src/app/cliente-create/cliente-create.component.html
+++ b/src/main/resources/templates/projetoCadastro-client/src/app/cliente-create/cliente-create.component.html
@@ -2,12 +2,12 @@
 <div [hidden]="submitted" style="width: 300px;">
   <form (ngSubmit)="onSubmit()">
     <div class="form-group">
-      <label for="name">Nome</label>
+      <label for="nome">Nome</label>
       <input type="text" class="form-control" id="nome" required [(ngModel)]="cliente.nome" name="nome">
     </div>
  
     <div class="form-group">
-      <label for="age">Cpf</label>
+      <label for="cpf">Cpf</label>
       <input type="text" class="form-control" id="cpf" required [(ngModel)]="cliente.cpf" name="cpf" placeholder="000.000.000-00">
     </div>
  
